syntax = "proto3";

package posts;

option go_package = "./proto;posts";

service Posts {
	rpc Save(SaveRequest) returns (SaveResponse) {}
	rpc Query(QueryRequest) returns (QueryResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message Post {
	string id = 1;
	string title = 2;
	string content = 3;
	int64 timestamp = 4;
	repeated string tagNames = 5;
}

message SaveRequest {
	Post post = 1;
}

message SaveResponse {
	Post post = 1;
}

message QueryRequest {
    string id = 1;
    int64 offset = 2;
    int64 limit = 3;
}

message QueryResponse {
    repeated Post posts = 1;
}

message DeleteRequest {
    string id = 1;
}

message DeleteResponse {
    int64 code = 1;
}
